--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             </div>
 <!--视频上方区域的信息没有做  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  ----------------------------------------------->
             <div class="container animate-box fadeInUp animated-fast">
-                <div class="top-main">
+                <!--<div class="top-main">
                     <h2 class="main-title">
                         欢迎来到海科<br>
                         <span>以创新启发创新&nbsp;以科技引领未来</span>
@@ -493,7 +493,8 @@
                 <p class="main-box visible-xs visible-sm">
                     海科集团始建于1988年，目前已发展成为集石化能源、特种化学品、新能源材料、医药、融资租赁、国际贸易等为一体的综合性大型跨国企业集团。集团下属公司分布在东营、上海、江苏、浙江、安徽、香港、韩国和新加坡等国家和地区。集团总资产达185亿元，拥有员工4500余人。
                     凭借销售业绩的高质量增长荣膺达沃斯论坛“全球成长型公司”称号，是“国家高新技术企业”、“中国企业500强”、“中国制造业500强”、“国家级智能制造试点示范项目”。近年来，海科围绕转型变革精准发力，企业保持了稳健的发展势头。2018年实现销售收入620亿元。
-                </p>
+                </p>-->
+                <div v-html="videoInfo.content"></div>
             </div>
         </div>
 
@@ -881,7 +882,7 @@
                 </ul>
                 <ul class="tab-cont">
                     <li class="tab-box" v-for="(item,index) in indexGuanLi">
-                        <p>{{item.context1}}
+                        <p>{{item.content}}
                             <!--卓越运营转型是海科最高层发动的为了实现极具挑战性的运营业绩目标而有意识开展的彻底、持久的运营变革。它通过对支撑业绩的员工能力、理念、制度和流程的持续改善来实现根本转变。--></p>
                         <i class="hk">&#xe610;</i>
                     </li>
@@ -925,7 +926,7 @@
                                 <p>卓越运营转型是海科最高层发动的为了实现极具挑战性的运营业绩目标而有意识开展的彻底、持久的运营变革。它通过对支撑业绩的员工能力、理念、制度和流程的持续改善来实现根本转变。
                                 </p>-->
                                 <h3>{{item.title}}</h3>
-                                <p>{{item.context1}}
+                                <p>{{item.content}}
                                 </p>
                             </div>
                         </div>
@@ -1300,8 +1301,8 @@
                 $.ajax({
                     url:api+`/bannerShow/frontEndList/${this.pageBanner}/${this.rowsBanner}/${this.liveBanner}/${this.selectAddr}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.lunbo = res.resultObject
+                        var res = JSON.parse(res)
+                        this.lunbo = res.data.rows
                         console.log(this.lunbo);
                     },
                     error(err){
@@ -1315,8 +1316,8 @@
                 $.ajax({
                     url: api+`/logo/frontEndList/${this.pageLogo}/${this.rowsLogo}/${this.liveLogo}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.imgs = res.resultObject
+                        var res = JSON.parse(res)
+                        this.imgs = res.data.rows
                         console.log(this.imgs);
                     },
                     error(err){
@@ -1331,8 +1332,8 @@
                 $.ajax({
                     url: api+`/introduction/frontEndList/${this.pageInfo}/${this.rowsInfo}/${this.liveInfo}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.videoInfo = res.resultObject
+                        var res = JSON.parse(res)
+                        this.videoInfo = res.data.rows[0]
                         console.log(this.videoInfo);
                     },
                     error(err){
@@ -1347,8 +1348,8 @@
                 $.ajax({
                     url: api+`/worldCooperation/frontEndList/${this.pageWorld}/${this.rowsWorld}/${this.liveWorld}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.word = res.resultObject
+                        var res = JSON.parse(res)
+                        this.word =res.data.rows
                         console.log(this.word);
                     },
                     error(err){
@@ -1356,14 +1357,15 @@
                     }
                 })
             },
+
             // 管理体系 35
             getGuanli(){
                 // '/newsType/'+this.type
                 $.ajax({
                     url: api+`/managementAndSystem/frontEndList/${this.pageGuanLi}/${this.rowsGuanLi}/${this.liveGuanLi}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.indexGuanLi = res.resultObject
+                        var res = JSON.parse(res)
+                        this.indexGuanLi = res.data.rows
                         console.log(this.indexGuanLi);
                         this.$nextTick(() => {
                             $('.autoTab').tabNav();
@@ -1378,8 +1380,8 @@
                 $.ajax({
                     url: api+`/haikeVideo/frontEndList/${this.pageVideo}/${this.rowsVideo}/${this.liveVideo}/${this.otherShow}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.videoList = res.resultObject
+                        var res = JSON.parse(res)
+                        this.videoList = res.data.rows
                         console.log(this.videoList);
                         this.$nextTick(() => {
                             this.videoList.forEach((item, index) => {
